--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.10.6",
+    "apollo-link-context": "^1.0.20",
     "graphql": "^16.9.0",
     "react": "^18.3.1",
     "react-auth-kit": "^3.1.3",
