--- a/package.json
+++ b/package.json
@@ -12,13 +12,18 @@
   "dependencies": {
     "@apollo/client": "^3.10.6",
     "apollo-link-context": "^1.0.20",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.2.11",
     "graphql": "^16.9.0",
+    "mini-svg-data-uri": "^1.4.4",
     "react": "^18.3.1",
     "react-auth-kit": "^3.1.3",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
+    "@types/node": "^20.14.8",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
