--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@apollo/client": "^3.10.6",
+    "@blocknote/core": "^0.14.2",
+    "@blocknote/mantine": "^0.14.2",
+    "@blocknote/react": "^0.14.2",
     "@headlessui/react": "^2.1.0",
     "apollo-link-context": "^1.0.20",
     "clsx": "^2.1.1",
