--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@blocknote/mantine": "^0.14.2",
     "@blocknote/react": "^0.14.2",
     "@headlessui/react": "^2.1.0",
+    "@heroicons/react": "^2.1.4",
     "apollo-link-context": "^1.0.20",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.11",
